--- a/CatsAndDogs.ipynb
+++ b/CatsAndDogs.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_path = Path('/storage/models')"
+    "model_path = Path()"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn = load_learner(model_path/'export.pkl')"
+    "learn = load_learner(model_path/'export.pkl', cpu=True)"
    ]
   },
   {
