--- a/CatsAndDogs.ipynb
+++ b/CatsAndDogs.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import *\n",
     "from fastai2.vision.all import *\n",
     "from fastai2.vision.widgets import *"
    ]
@@ -35,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn = load_learner(model_path/'export.pkl', cpu=True)"
+    "learn = load_learner('export.pkl', cpu=True)"
    ]
   },
   {
