--- a/CatsAndDogs.ipynb
+++ b/CatsAndDogs.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn = load_learner('export.pkl', cpu=True)"
+    "learn = load_learner(model_path/'export.pkl', cpu=True)"
    ]
   },
   {
